# opencv-image-set

./: README.md  matching_to_many_images.cpp
Match_Transform/: matching_to_many_images.cpp
Set_With_Match_Confidence/: CMakeLists.txt  matching_to_many_images.cpp
